opam-version: "2.0"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage: "https://github.com/dinosaure/gilbraltar"
bug-reports: "https://github.com/dinosaure/gilbraltar/issues/"
license: "MIT"
tags: "org:mirage"
dev-repo: "git+https://github.com/dinosaure/gilbraltar.git"
build: [
  ["sh" "-c" "cd caml-linux ; ./configure.sh --prefix=%{prefix}%" ]
  ["sh" "-c" "cd caml-linux ; %{make}% -j%{jobs}%"]
]
install: ["sh" "-c" "cd caml-linux ; %{make}% install" ]
depends: [
  "ocamlfind" {build}
  "ocaml-src" {build}
  "ocaml" {>= "4.08.0" & < "4.14.0"}
]
available: [
  ( (os = "linux"   & (arch = "x86_64" | arch = "arm64"))
  | (os = "freebsd" &  arch = "x86_64")
  | (os = "openbsd" &  arch = "x86_64"))
]
synopsis: "Raspberry Pi 4 OCaml compiler for aarch64 linux"
description:
  "This package provides an OCaml cross-compiler aarch64 linux"
