opam-version: "2.0"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage: "https://github.com/dinosaure/gilbraltar"
bug-reports: "https://github.com/dinosaure/gilbraltar/issues/"
license: "MIT"
tags: "org:mirage"
dev-repo: "git+https://github.com/dinosaure/gilbraltar.git"
build: [
  ["./configure.sh" "--prefix=%{prefix}%"]
  [make "-C" "kernel" "all"]
]
install: [make "install-toolchain"]
depends: [
  "ocamlfind" {build}
  "ocaml" {>= "4.08.0" & < "4.14.0"}
]
available: [
  os = "linux" & arch = "x86_64"
]
synopsis: "Raspberry Pi 4 OCaml compiler"
description:
  "This package provides a freestanding OCaml cross-compiler, suitable for linking with a unikernel base layer for Raspberry Pi 4."
version: "0.1.0"
