opam-version: "2.0"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage: "https://github.com/dinosaure/gilbraltar"
bug-reports: "https://github.com/dinosaure/gilbraltar/issues/"
license: "MIT"
tags: "org:mirage"
dev-repo: "git+https://github.com/dinosaure/gilbraltar.git"
build: [
  [ "sh" "-c" "cd kernel ; ./configure.sh --prefix=%{prefix}%" ]
  [ "sh" "-c" "cd kernel ; %{make}% all" ]
]
install: [ "sh" "-c" "cd kernel ; %{make}% install" ]
depends: [ ]
depexts: [
  ["linux-headers"] {os-distribution = "alpine"}
  ["kernel-headers"] {os-distribution = "fedora"}
  ["kernel-headers"] {os-distribution = "rhel"}
  ["linux-libc-dev"] {os-family = "debian"}
  ["gcc-aarch64-linux-gnu"] {os-family = "debian"}
]
available: [
  (arch != "arm64") &
  (os = "linux" & os-family = "debian")
]
synopsis: "Raspberry Pi 4 OCaml compiler"
description:
  "This package provides a freestanding OCaml cross-compiler, suitable for linking with a unikernel base layer for Raspberry Pi 4."
