opam-version: "2.0"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage: "https://github.com/dinosaure/gilbraltar"
bug-reports: "https://github.com/dinosaure/gilbraltar/issues/"
license: "MIT"
tags: "org:mirage"
dev-repo: "git+https://github.com/dinosaure/gilbraltar.git"
build: [
  ["./configure.sh"
   "--prefix=%{prefix}%"
   "--ocaml-configure-option=--with-afl" {ocaml-option-afl:installed}
   "--ocaml-configure-option=--disable-native-compiler" {ocaml-option-bytecode-only:installed}
   "--ocaml-configure-option=--disable-force-safe-string" {ocaml-option-default-unsafe-string:installed}
   "--ocaml-configure-option=DEFAULT_STRING=unsafe" {ocaml-option-default-unsafe-string:installed}
   "--ocaml-configure-option=--disable-flat-float-array" {ocaml-option-no-flat-float-array:installed}
   "--ocaml-configure-option=--enable-flambda" {ocaml-option-flambda:installed}
   "--ocaml-configure-option=--enable-frame-pointers" {ocaml-option-fp:installed}
   "--ocaml-configure-option=--enable-spacetime" {ocaml-option-spacetime:installed}
   "--ocaml-configure-option=--disable-naked-pointers" {ocaml-option-nnp:installed}
   "--ocaml-configure-option=--enable-naked-pointers-checker" {ocaml-option-nnpchecker:installed}
  ]
  [make "-j%{jobs}%"]
]
install: [make "install" ]
depends: [
  "ocamlfind" {build}
  "ocaml-src" {build}
  "ocaml" {>= "4.08.0" & < "4.14.0"}
]
available: [
  os = "linux" & arch = "x86_64"
]
synopsis: "Raspberry Pi 4 OCaml compiler"
description:
  "This package provides a freestanding OCaml cross-compiler, suitable for linking with a unikernel base layer for Raspberry Pi 4."
version: "0.1.0"
