opam-version: "2.0"
maintainer:    "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:      "https://github.com/dinosaure/gilbraltar"
bug-reports:   "https://github.com/dinosaure/gilbraltar/issues"
dev-repo:      "git+https://github.com/dinosaure/gilbraltar.git"
doc:           "https://mirage.github.io/gilbraltar/"
license:       "ISC"
authors:       "Romain Calascibetta <romain.calascibetta@gmail.com>"
tags: [
  "org:mirage"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml"             {>= "4.06.0"}
  "dune"              {>= "1.0"}
  "mirage-console"    {>= "3.0.0"}
  "mirage-gilbraltar"
  "bigstringaf"
  "cstruct"
  "cstruct"
  "lwt"
  "ke"                {>= "0.4"}
]
synopsis: "RPi4 implementation of MirageOS console interface"
description:
  "This library implements the MirageOS console interface for RPi4 targets."
