(rule
 (target libopenlibm.a)
 (enabled_if
  (= %{context_name} rpi4))
 (deps
  Makeconf
  (source_tree openlibm))
 (action
  (no-infer
   (progn
    (run %{make} openlibm/libopenlibm.a)
    (copy openlibm/libopenlibm.a libopenlibm.a)))))

(rule
 (target libnolibc.a)
 (enabled_if
  (= %{context_name} rpi4))
 (deps
  Makeconf
  (source_tree nolibc)
  libopenlibm.a)
 (action
  (no-infer
   (progn
    (run %{make} nolibc/libnolibc.a)
    (copy nolibc/libnolibc.a libnolibc.a)))))

(rule
 (targets Makeconf Makeconf.sh)
 (enabled_if
  (= %{context_name} rpi4))
 (action
  (progn
   (bash "./configure.sh"))))
