(executable
 (enabled_if
  (= %{context_name} rpi4))
 (name main)
 (link_flags -g -w +A-4-41-42-44 -bin-annot -strict-sequence -principal
   -safe-string -color always -cclib "-z rpi4-abi=rpi4")
 (foreign_stubs
  (language c)
  (names stubs)))

(rule
 (enabled_if
  (= %{context_name} rpi4))
 (target kernel8.elf)
 (deps main.exe)
 (mode promote)
 (action
  (copy main.exe kernel8.elf)))

(rule
 (enabled_if
  (= %{context_name} rpi4))
 (target kernel8.img)
 (deps kernel8.elf)
 (mode promote)
 (action
  (run aarch64-linux-gnu-objcopy -O binary %{deps} %{target})))

(alias
 (name default)
 (enabled_if
  (= %{context_name} rpi4)))
