(rule
 (targets gilbraltar_rpi4.elf gilbraltar_stub.elf)
 (deps
  ../Makeconf
  ../Makeconf.sh
  (source_tree .)
  (source_tree ../../tools/arm64-pgtable-tool/))
 (action
  (progn
   (bash
    "cd .. && . ./Makeconf.sh && ./gen-headers.sh ./include/$CONFIG_TARGET_TRIPLE")
   (run %{make} gilbraltar_rpi4.elf gilbraltar_stub.elf))))
